--- a/manifest.json
+++ b/manifest.json
@@ -11,18 +11,11 @@
   "host_permissions": [
     "https://treehole.pku.edu.cn/*"
   ],
-  "action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-      "48": "icon48.png",
-      "128": "icon128.png"
-    }
-  },
   "content_scripts": [
     {
       "matches": ["https://treehole.pku.edu.cn/*"],
-      "js": ["content.js"],
-      "css": ["styles.css"]
+      "css": ["floating-panel.css"],
+      "js": ["content.js"]
     }
   ],
   "icons": {
