--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,13 @@
   "host_permissions": [
     "https://treehole.pku.edu.cn/*"
   ],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "48": "icon/icon48.png",
+      "128": "icon/icon128.png"
+    }
+  },
   "content_scripts": [
     {
       "matches": ["https://treehole.pku.edu.cn/*"],
