--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
     }
   ],
   "web_accessible_resources": [{
-    "resources": ["icon/icon48.png", "assets/html2canvas.min.js", "assets/html2canvas-executor.js"],
+    "resources": ["icon/icon48.png", "assets/html2canvas.min.js", "assets/html2canvas-executor.js", "Modules/PostUI.js", "Modules/*"],
     "matches": ["https://treehole.pku.edu.cn/*"]
   }],
   "icons": {
